# pong

./: CMakeLists.txt  README.md
resources/shaders/: shader.frag
src/: main.c
